Fix: Update code to pass checkstyle