@@ -12,7 +12,7 @@ import org.slf4j.Logger;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.Base64;
 import java.util.Collections;
@@ -24,47 +24,86 @@ public class CertificateUtils {
     private static final Logger LOGGER = LoggerUtils.getLogger();
 
     /**
-     * @param newTruststorePath Path to the new truststore
-     * @param newTruststorePassword Password for the new truststore
-     * @param certificateAlias Alias of certificate
-     * @param publicKeyToImportPath Path to the public key to be imported
+     * @param path Path to the new truststore
+     * @param password Password for the new truststore
+     * @param publicKey Path to the public key to be imported
      */
-    private static void createTruststore(String newTruststorePath, String newTruststorePassword, String certificateAlias, String publicKeyToImportPath) {
-        Exec.executeAndCheck("keytool", "-keystore", newTruststorePath, "-storepass", newTruststorePassword, "-noprompt", "-alias", certificateAlias, "-import", "-file", publicKeyToImportPath, "-storetype", "PKCS12");
-    }
-
-    /**
-     * @param newKeystorePath Path to the new keystore
-     * @param newKeystorePassword Password for the new keystore
-     * @param publicKeyToImportPath Public key to be imported
-     * @param privateKeyToImportPath Private key to be imported
-     */
-    private static void createKeystore(String newKeystorePath, String newKeystorePassword, String publicKeyToImportPath, String privateKeyToImportPath, String hostname) {
-        List<String> commands = List.of("openssl",  "pkcs12",  "-export",  "-in", publicKeyToImportPath, "-inkey", privateKeyToImportPath, "-name", hostname, "-password", "pass:" + newKeystorePassword, "-out", newKeystorePath);
-
-        Exec.executeAndCheck(commands, 60_000, true, true, Collections.singletonMap("RANDFILE", Paths.get(Environment.tempPath, ".rnd").toString()));
-    }
-
-    private static String getBase64DecodedSecretValue(String namespace, String name, String dataKey) {
-        return new String(
-                Base64.getDecoder().decode(
-                        Kubernetes.getClient().secrets().inNamespace(namespace).withName(name).get().getData().get(dataKey)
-                )
+    private static void runTruststoreCmd(Path path, String password, Path publicKey) {
+        Exec.executeAndCheck(
+                "keytool",
+                "-keystore", path.toString(),
+                "-storepass", password,
+                "-noprompt",
+                "-alias", "ca",
+                "-import",
+                "-file", publicKey.toString(),
+                "-storetype", "PKCS12"
         );
     }
 
-    private static void writeContentToFile(String content, String filePath) {
+    /**
+     * @param path Path to the new keystore
+     * @param password Password for the new keystore
+     * @param publicKey Public key to be imported
+     * @param privateKey Private key to be imported
+     */
+    private static void runKeystoreCmd(Path path, String password, Path publicKey, Path privateKey, String hostname) {
+        List<String> commands = List.of(
+                "openssl",
+                "pkcs12",
+                "-export",
+                "-in", publicKey.toString(),
+                "-inkey", privateKey.toString(),
+                "-name", hostname,
+                "-password", "pass:" + password,
+                "-out", path.toString()
+        );
+
+        Exec.executeAndCheck(
+                commands,
+                60_000,
+                true,
+                true,
+                Collections.singletonMap("RANDFILE", Environment.getTempPath(".rnd").toString())
+        );
+    }
+
+    private static String encode(Path path) {
         try {
-            Files.writeString(Paths.get(filePath), content, StandardCharsets.UTF_8);
+            return Base64.getEncoder().encodeToString(Files.readAllBytes(path));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    private static void createSecret(ExtensionContext testContext, String namespace, String secretName, Map<String, String> secretData) {
+    private static String encode(String data) {
+        return Base64.getEncoder().encodeToString(data.getBytes(StandardCharsets.UTF_8));
+    }
+
+    private static String decode(String data) {
+        return new String(
+                Base64.getDecoder().decode(data)
+        );
+    }
+
+    private static String decodeBase64Secret(String namespace, String name, String key) {
+        return decode(Kubernetes.getSecretValue(namespace, name, key));
+    }
+
+    private static void writeToFile(String data, Path path) {
+        try {
+            Files.writeString(path, data, StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private static void createSecret(
+            ExtensionContext testContext, String namespace, String name, Map<String, String> secretData
+    ) {
         Secret secret = new SecretBuilder()
                 .withNewMetadata()
-                    .withName(secretName)
+                    .withName(name)
                     .withNamespace(namespace)
                 .endMetadata()
                 .addToData(secretData)
@@ -73,82 +112,55 @@ public class CertificateUtils {
         ResourceManager.getInstance().createResource(testContext, true, secret);
     }
 
-    public static void createCertificateStores(ExtensionContext testContext, String clusterCaCertificateSecretName, String clientCertificateSecretName, String truststoreSecretName, String keystoreSecretName, String hostname, String namespace) {
-        if(clusterCaCertificateSecretName == null || clusterCaCertificateSecretName.equals("")) {
-            throw new IllegalArgumentException("Cluster CA certificate name is not set.");
-        }
-
-        LOGGER.info("Cluster CA certificate name: {}", clusterCaCertificateSecretName);
-
-        LOGGER.info("Client certificate secret name: {}", clientCertificateSecretName);
-
-        if(truststoreSecretName == null || truststoreSecretName.equals("")) {
-            throw new IllegalArgumentException("Truststore secret name is not set.");
-        }
-
-        LOGGER.info("Truststore secret name: {}", truststoreSecretName);
-
-        LOGGER.info("Keystore secret name: {}", keystoreSecretName);
-
-        LOGGER.info("Hostname: {}", hostname);
-
-        LOGGER.info("Namespace: {}", namespace);
-
-        String timestamp = String.valueOf(Instant.now().getEpochSecond());
-        String caPath = Paths.get(Environment.tempPath, "ca-" + timestamp + ".crt").toString();
-        String truststorePath = Paths.get(Environment.tempPath, "truststore-" + timestamp + ".p12").toString();
-
-        String clusterCaCertificateSecretValue = getBase64DecodedSecretValue(namespace, clusterCaCertificateSecretName, "ca.crt");
-
+    public static void createTruststore(
+            ExtensionContext testContext,
+            String namespace,
+            String caCertSecretName,
+            String truststoreSecretName
+    ) {
         LOGGER.info("Preparing truststore...");
 
+        String timestamp = String.valueOf(Instant.now().getEpochSecond());
+        String caCertSecretValue = decodeBase64Secret(namespace, caCertSecretName, "ca.crt");
+        Path caPath = Environment.getTempPath("ca-" + timestamp + ".crt");
+        Path truststorePath = Environment.getTempPath("truststore-" + timestamp + ".p12");
         String truststorePassword = RandomStringUtils.randomAlphanumeric(32);
+        Map<String, String> secretData = new HashMap<>() {{
+            put("ca.p12", encode(truststorePath));
+            put("ca.password", encode(truststorePassword));
+        }};
 
-        writeContentToFile(clusterCaCertificateSecretValue, caPath);
+        writeToFile(caCertSecretValue, caPath);
 
-        createTruststore(truststorePath, truststorePassword, "ca", caPath);
+        runTruststoreCmd(truststorePath, truststorePassword, caPath);
 
-        try {
-            createSecret(
-                    testContext,
-                    namespace,
-                    truststoreSecretName,
-                    new HashMap<>() {{
-                        put("ca.p12", Base64.getEncoder().encodeToString(Files.readAllBytes(Paths.get(truststorePath))));
-                        put("ca.password", Base64.getEncoder().encodeToString(truststorePassword.getBytes(StandardCharsets.UTF_8)));
-                    }}
-            );
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+        createSecret(testContext, namespace, truststoreSecretName, secretData);
+    }
 
-        if(clientCertificateSecretName != null && !clientCertificateSecretName.equals("")) {
-            String userCertificatePath = Paths.get(Environment.tempPath, "user-" + timestamp + ".crt").toString();
-            String userKeyPath = Paths.get(Environment.tempPath, "user-" + timestamp + ".key").toString();
-            String keystorePath = Paths.get(Environment.tempPath, "keystore-" + timestamp + ".p12").toString();
-            // TODO: Check necessary values to be set
-            LOGGER.info("Preparing keystore...");
+    public static void createKeystore(
+            ExtensionContext testContext,
+            String namespace,
+            String clientCertSecretName,
+            String keystoreSecretName,
+            String hostname
+    ) {
+        LOGGER.info("Preparing keystore...");
 
-            String keystorePassword = RandomStringUtils.randomAlphanumeric(32);
+        String timestamp = String.valueOf(Instant.now().getEpochSecond());
+        Path userCertPath = Environment.getTempPath("user-" + timestamp + ".crt");
+        Path userKeyPath = Environment.getTempPath("user-" + timestamp + ".key");
+        Path keystorePath = Environment.getTempPath("keystore-" + timestamp + ".p12");
+        String keystorePassword = RandomStringUtils.randomAlphanumeric(32);
+        Map<String, String> secretData = new HashMap<>() {{
+            put("user.p12", encode(keystorePath));
+            put("user.password", encode(keystorePassword));
+        }};
 
-            writeContentToFile(getBase64DecodedSecretValue(namespace, clientCertificateSecretName, "user.crt"), userCertificatePath);
-            writeContentToFile(getBase64DecodedSecretValue(namespace, clientCertificateSecretName, "user.key"), userKeyPath);
+        writeToFile(decodeBase64Secret(namespace, clientCertSecretName, "user.crt"), userCertPath);
+        writeToFile(decodeBase64Secret(namespace, clientCertSecretName, "user.key"), userKeyPath);
 
-            createKeystore(keystorePath, keystorePassword, userCertificatePath, userKeyPath, hostname);
+        runKeystoreCmd(keystorePath, keystorePassword, userCertPath, userKeyPath, hostname);
 
-            try {
-                createSecret(
-                        testContext,
-                        namespace,
-                        keystoreSecretName,
-                        new HashMap<>() {{
-                            put("user.p12", Base64.getEncoder().encodeToString(Files.readAllBytes(Paths.get(keystorePath))));
-                            put("user.password", Base64.getEncoder().encodeToString(keystorePassword.getBytes(StandardCharsets.UTF_8)));
-                        }}
-                );
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        }
+        createSecret(testContext, namespace, keystoreSecretName, secretData);
     }
 }
